--- a/src/app/ofertasguardadas/ofertasguardadas.component.html
+++ b/src/app/ofertasguardadas/ofertasguardadas.component.html
@@ -12,32 +12,42 @@
         [navigation]="true"
         [pagination]="{ clickable: true }"
         [loop]="false"
-        [slidesPerView]="4.5"
+        [slidesPerView]="slidesPerView"
         [slidesPerGroup]="1"
-        [spaceBetween]="16"
-        class="custom-swiper"
-      >
+        [spaceBetween]="1"
+        [breakpoints]="swiperBreakpoints"
+        class="custom-swiper">
         <ng-template swiperSlide *ngFor="let producto of productos">
           <ion-card class="product-card" [class.cardclaro]="modo" [class.cardoscuro]="!modo">
             <div class="heart-icon" (click)="toggleFavorito(producto)">
               <ion-icon [name]="producto.favorito ? 'heart' : 'heart-outline'"></ion-icon>
             </div>
-
             <img [src]="producto.image" alt="Imagen de {{ producto.title }}" />
             <ion-card-header>
               <ion-card-title [class.claro]="modo" [class.oscuro]="!modo">{{ producto.title }}</ion-card-title>
-              <ion-badge color="danger" *ngIf="producto.discount">
+              <ion-badge
+                color="danger"
+                *ngIf="producto.discount && producto.oldPrice && producto.oldPrice !== 0 && producto.oldPrice !== producto.actualPrice">
                 {{ producto.discount }} OFF
               </ion-badge>
             </ion-card-header>
             <ion-card-content>
               <div class="price-row">
                 <span class="actual-price">€{{ producto.actualPrice.toFixed(2) }}</span>
-                <span class="old-price">€{{ producto.oldPrice?.toFixed(2) }}</span>
+                <span class="old-price" *ngIf="producto.oldPrice && producto.oldPrice !== 0 && producto.oldPrice !== producto.actualPrice">
+                  €{{ producto.oldPrice.toFixed(2) }}
+                </span>
               </div>
-              <div class="rating" [class.claro]="modo" [class.oscuro]="!modo">⭐ {{ producto.rating }}</div>
-              <div class="delivery" [class.claro]="modo" [class.oscuro]="!modo">{{ producto.delivery }}</div>
-              <ion-button expand="block" fill="outline" size="small" [href]="producto.url" target="_blank" class="login-button">Ver más</ion-button>
+              <div class="rating" [class.claro]="modo" [class.oscuro]="!modo" *ngIf="producto.rating">⭐ {{ producto.rating }}</div>
+              <ion-button
+                expand="block"
+                fill="outline"
+                size="small"
+                [href]="producto.url"
+                target="_blank"
+                class="login-button">
+                Ver más
+              </ion-button>
             </ion-card-content>
           </ion-card>
         </ng-template>
