--- a/src/app/paneladmin/paneladmin.component.html
+++ b/src/app/paneladmin/paneladmin.component.html
@@ -57,8 +57,8 @@
   <!-- Perfiles -->
   <h2 class="subtitulo" [class.claro]="modo" [class.oscuro]="!modo">Perfiles</h2>
   <ion-grid class="perfil-grid">
-    <ion-row justify-content-center>
-      <ion-col size="2" size-sm="8" size-md="4" size-lg="2.4" *ngFor="let perfil of perfiles">
+    <ion-row>
+      <ion-col size="12" size-sm="6" size-md="4" size-lg="3" size-xl="2.4" *ngFor="let perfil of perfiles">
         <ion-card class="perfil-card" [class.cardclaro]="modo" [class.cardoscuro]="!modo">
           <img [src]="perfil.imagen" alt="Imagen de {{ perfil.nombre }}" />
           <ion-card-header>
