--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -76,7 +76,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   width: 100%;
 }
 
@@ -123,6 +123,29 @@
     color: #ffffff;
   }
 }
+
+.estado-busqueda {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -40px; /* Ajusta este valor según tu espacio deseado */
+}
+
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 16px;
+  gap: 8px;
+}
+
+.no-products-message {
+  text-align: center;
+  font-size: 1rem;
+  margin-top: 16px;
+}
+
 
 /* ------------------ TITULOS ------------------ */
 .empresa-titulo {
