panel admin FULL--> buscar/eliminar/modificar/beanear/desbanear y con correos y todo

--- a/src/app/paneladmin/paneladmin.component.html
+++ b/src/app/paneladmin/paneladmin.component.html
@@ -16,7 +16,9 @@
       placeholder="Buscar perfil..."
       class="input-item"
       [class.searchclaro]="modo"
-      [class.searchoscuro]="!modo">
+      [class.searchoscuro]="!modo"
+      (ionInput)="buscarPerfiles($event)"
+      debounce="150">
     </ion-searchbar>
     <ion-button (click)="abrirCrearProducto()" [fill]="modo ? 'solid' : 'outline'">Crear Producto</ion-button>
   </div>
