--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -62,10 +62,9 @@
           <img [src]="productadmin.image" alt="Imagen de {{ productadmin.title }}" />
           <ion-card-header>
             <ion-card-title [class.claro]="modo" [class.oscuro]="!modo">{{ productadmin.title }}</ion-card-title>
-            <ion-badge
-              color="danger"
+            <ion-badge class="descuento"
               *ngIf="productadmin.discount && productadmin.oldPrice && productadmin.oldPrice !== 0 && productadmin.oldPrice !== productadmin.actualPrice">
-              {{ productadmin.discount }} OFF
+              {{ productadmin.discount }}
             </ion-badge>
           </ion-card-header>
           <ion-card-content>
@@ -109,11 +108,15 @@
             <div class="heart-icon" (click)="toggleFavorito(producto)">
               <ion-icon [name]="producto.favorito ? 'heart' : 'heart-outline'"></ion-icon>
             </div>
+
+            <div class="interest-badge">
+              <ion-badge>Te podría interesar</ion-badge>
+            </div>
+
             <img [src]="producto.image" alt="Imagen de {{ producto.title }}" />
             <ion-card-header>
               <ion-card-title [class.claro]="modo" [class.oscuro]="!modo">{{ producto.title }}</ion-card-title>
-              <ion-badge
-                color="danger"
+              <ion-badge class="descuento"
                 *ngIf="producto.discount && producto.oldPrice && producto.oldPrice !== 0 && producto.oldPrice !== producto.actualPrice">
                 {{ producto.discount }} OFF
               </ion-badge>
