--- a/src/app/menuizquierda/menuizquierda.component.html
+++ b/src/app/menuizquierda/menuizquierda.component.html
@@ -4,21 +4,13 @@
   </ion-card-header>
 
   <ion-card-content>
-    <!-- Tops -->
-    <ion-label class="seccion-label" [class.text-claro]="modo" [class.text-oscuro]="!modo">Tops</ion-label>
-    <ion-item lines="none">
-      <ion-button>Top 5</ion-button>
-      <ion-button>Top 15</ion-button>
-    </ion-item>
-
     <!-- Ordenar por -->
     <ion-label class="seccion-label" [class.text-claro]="modo" [class.text-oscuro]="!modo">Ordenar por</ion-label>
     <ion-item>
-      <ion-select placeholder="Seleccionar" [class.text-claro]="modo" [class.text-oscuro]="!modo">
+      <ion-select placeholder="Seleccionar" [(ngModel)]="sortBy" [class.text-claro]="modo" [class.text-oscuro]="!modo">
         <ion-select-option value="precio-asc">Precio: Menor a mayor</ion-select-option>
         <ion-select-option value="precio-desc">Precio: Mayor a menor</ion-select-option>
         <ion-select-option value="popularidad">Popularidad</ion-select-option>
-        <ion-select-option value="novedades">Novedades</ion-select-option>
       </ion-select>
     </ion-item>
 
@@ -28,10 +20,10 @@
     </ion-label>
     <div class="price-inputs">
       <ion-item class="compact-input">
-        <ion-input type="number" placeholder="Mín" [class.text-claro]="modo" [class.text-oscuro]="!modo"></ion-input>
+        <ion-input type="number" placeholder="Mín" [(ngModel)]="minPrice" [class.text-claro]="modo" [class.text-oscuro]="!modo"></ion-input>
       </ion-item>
       <ion-item class="compact-input">
-        <ion-input type="number" placeholder="Máx" [class.text-claro]="modo" [class.text-oscuro]="!modo"></ion-input>
+        <ion-input type="number" placeholder="Máx" [(ngModel)]="maxPrice" [class.text-claro]="modo" [class.text-oscuro]="!modo"></ion-input>
       </ion-item>
     </div>
 
@@ -39,15 +31,17 @@
     <ion-label class="seccion-label" [class.text-claro]="modo" [class.text-oscuro]="!modo">
       Categorías
     </ion-label>
-    <ion-list>
-      <ion-item *ngFor="let categoria of categorias">
-        <ion-checkbox slot="start" class="checkbox"></ion-checkbox>
-        <ion-label [class.text-claro]="modo" [class.text-oscuro]="!modo">{{ categoria }}</ion-label>
-      </ion-item>
-    </ion-list>
+    <ion-radio-group [(ngModel)]="selectedCategory">
+      <ion-list>
+        <ion-item *ngFor="let categoria of categorias">
+          <ion-radio slot="start" [value]="categoria"></ion-radio>
+          <ion-label [class.text-claro]="modo" [class.text-oscuro]="!modo">{{ categoria }}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-radio-group>
 
     <!-- Botones -->
-    <ion-button expand="block">Aplicar filtros</ion-button>
-    <ion-button>Restablecer</ion-button>
+    <ion-button expand="block" (click)="applyCurrentFilters()">Aplicar filtros</ion-button>
+    <ion-button (click)="resetFilters()">Restablecer</ion-button>
   </ion-card-content>
 </ion-card>
