--- a/src/app/ofertasguardadas/ofertasguardadas.component.html
+++ b/src/app/ofertasguardadas/ofertasguardadas.component.html
@@ -25,10 +25,9 @@
             <img [src]="producto.image" alt="Imagen de {{ producto.title }}" />
             <ion-card-header>
               <ion-card-title [class.claro]="modo" [class.oscuro]="!modo">{{ producto.title }}</ion-card-title>
-              <ion-badge
-                color="danger"
+              <ion-badge class="descuento"
                 *ngIf="producto.discount && producto.oldPrice && producto.oldPrice !== 0 && producto.oldPrice !== producto.actualPrice">
-                {{ producto.discount }} OFF
+                {{ producto.discount }}
               </ion-badge>
             </ion-card-header>
             <ion-card-content>
