--- a/src/app/crearproductopopover/crearproductopopover.component.html
+++ b/src/app/crearproductopopover/crearproductopopover.component.html
@@ -81,7 +81,7 @@
 
       <ion-row>
         <ion-col class="ion-text-center">
-          <ion-button expand="block" class="boton-guardar" (click)="guardar()">Crear Producto</ion-button>
+          <ion-button expand="block" class="boton-guardar" (click)="guardar()">Guardar Producto</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
