--- a/src/app/paneladmin/paneladmin.component.scss
+++ b/src/app/paneladmin/paneladmin.component.scss
@@ -146,8 +146,9 @@ ion-button {
   position: relative;
   width: 100%;
   max-width: 230px;
-  height: auto;
-  min-height: 370px;
+  height: 100%;
+  min-height: 430px;
+  max-height: 430px;
   display: flex;
   flex-direction: column;
   border: 2px solid var(--border-color);
@@ -155,8 +156,8 @@ ion-button {
 
   img {
     height: 100%;
-    max-height: 140px;
-    min-height: 140px;
+    max-height: 160px;
+    min-height: 160px;
     object-fit: cover;
     margin: 10px auto 0;
     display: block;
