--- a/src/app/crearproductopopover/crearproductopopover.component.html
+++ b/src/app/crearproductopopover/crearproductopopover.component.html
@@ -1,5 +1,5 @@
 <ion-content class="popover-content login-background">
-  <div class="contenido">
+  <div>
     <ion-grid  [class.gridclaro]="modo" [class.gridoscuro]="!modo">
       <ion-row class="ion-justify-content-center" style="align-items: center">
         <ion-col size="5" class="ion-text-center">
