Estilos para notificaciones

--- a/src/app/crearalertapopover/crearalertapopover.component.html
+++ b/src/app/crearalertapopover/crearalertapopover.component.html
@@ -4,7 +4,7 @@
 
       <ion-row class="ion-justify-content-center ion-margin-top">
         <ion-col size="12" class="ion-text-center">
-          <ion-icon name="notifications-outline" class="icono-alerta"></ion-icon>
+          <ion-icon name="alarm-outline" class="icono-alerta"></ion-icon>
         </ion-col>
       </ion-row>
 
